[package]
name = "icy_term"
version = "0.5.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A terminal program supporting CP437, PetScii and ViewData"
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_term"

[package.metadata.bundle]
name = "Icy Term"
identifier = "com.github.icy_term"
icon = [ "assets/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[dependencies]
eframe = "0.22.0"
egui_extras = { version="0.22.0", features = ["svg"] }
egui_glow = "0.22.0"
glow = "0.12.2"

#sound
cpal = { git = "https://github.com/RustAudio/cpal.git" }
anyhow = "1.0"
icy_engine = { git = "https://github.com/mkrueger/icy_engine.git" }
tokio = { version = "1.21.2", features = ["full"] }

directories = "5.0.1"
rfd = "0.11.4"
walkdir = "2"
toml = "0.7.4"
lazy_static = "1.4.0"
open = "5.0.0"
notify = "6.0.0"
gabi = "0.2.6"
clipboard = "0.5.0"
serde = "1.0.147"
serde_derive = "1.0.145"
async-trait = "0.1.58"
rand = "0.8"
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise", features = ["tokio"] }

i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.2"
once_cell = "1.16.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
winres = "0.1"

[profile.release]
strip = "symbols"

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
license-file="build/windows/license.rtf"
depends = "libasound2"
assets = [
    ["target/release/icy_term", "/usr/bin/", "755"],
    ["build/linux/icy_term.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_term.png",       "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_term.png",     "644"],
]
