[package]
name = "icy_term"
version = "0.6.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A terminal program supporting CP437, PetScii and ViewData"
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_term"

[package.metadata.bundle]
name = "Icy Term"
identifier = "com.github.icy_term"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version="0.22.0" }
egui_glow = "0.22.0"
glow = "0.12.2"
dark-light = "1.0.0"

#sound
rodio = { version = "0.17.1" , default-features = false, features = [] }
icy_engine = { git ="https://github.com/mkrueger/icy_engine" }
#icy_engine = { path = "../icy_engine" }

walkdir = "2"
toml = "0.7.6"

lazy_static = "1.4.0"
notify = "6.0.0"
gabi = "0.2.6"
clipboard = "0.5.0"
chrono = "0.4.26"  # Utc hanldung

i18n-embed-fl = "0.6.7"
# currently disabled because there needs to be a fix for wasm32:
#rust-embed = "6.8.1"
once_cell = "1.18.0"

log = "0.4"
env_logger = "0.10.0"
web-time = "0.2.0"

# WebSocket support
tungstenite = { version = "0.20.0", features = [
    "rustls-tls-webpki-roots", # webpki root CAs
    "__rustls-tls",            # use Rustls
]}

http = "0.2.9"
url = "2.4.0"
rustls = { version = "0.21.6", features = [
    "tls12",
    "dangerous_configuration"  # Allow invalid certs/etc.
]}
webpki-roots = "0.25.2"
getrandom =  { version = "0.2.10", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0.1"
rfd = "0.11.4"
open = "5.0.0"
i18n-embed = { version = "0.13.9", features = ["fluent-system", "desktop-requester"]}
tracing-subscriber = "0.3"
libssh-rs =  { version = "0.2.0", features = ["vendored", "vendored-openssl"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
i18n-embed = { version = "0.13.9", features = ["fluent-system", "web-sys-requester"]}
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm_thread = { version = "0.2.0", features = ["es_modules"]}

[build-dependencies]
winres = "0.1"

[profile.release]
strip = "symbols"

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
license-file="build/license.rtf"
depends = "libasound2"
assets = [
    ["target/release/icy_term", "/usr/bin/", "755"],
    ["build/linux/icy_term.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_term.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_term.png", "644"],
]
